bcl.com.au (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2132,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.77,
  "homepage_snapshot_redirected_domain": "bcl.com.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926091413id_/http://bcl.com.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926091413id_/http%3A//bcl.com.au",
  "interval": "2004_B",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bcl.com.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204180209id_/http%3A//bcl.com.au/privacy.htm",
  "policy_title": "BCL - Privacy Policy",
  "policy_url": "bcl.com.au/privacy.htm",
  "sha1": "26c6a04ab77e7b454060a1e8255a859e96bbdbe1",
  "simhash": 15988667357950505988,
  "simhash_updated": false,
  "site_hostname": "bcl.com.au",
  "site_url": "http://bcl.com.au",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204180209",
  "word_count": 349,
  "year": 2004
}

--- a/b/bc/bcl/bcl.com.au.html
+++ b/b/bc/bcl/bcl.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bcl.com.au privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605114051id_/http%3A//bcl.com.au/bcl/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bcl.com.au privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204180209id_/http%3A//bcl.com.au/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>BCL - Privacy Policy</title>
@@ -9,7 +9,27 @@
 
 <body>
 <table cellpadding="0" cellspacing="0" width="100%" border="0"><tbody><tr valign="top">
-<td><a href="default.htm"><img src="bcl.gif" hspace="0" border="0" alt="BRISBANE CITY LIFE" width="300" height="150"> </a></td>
+<td><!--webbot bot="Include" U-Include="xxtopleft.htm" TAG="BODY" startspan -->
+<p><map name="FPMap0_I1">
+<area href="http://www.bcl.com.au/bcl/" shape="rect" coords="89, 31, 149, 46" target="_top">
+<area href="http://www.bcl.com.au/adelaide/" shape="rect" coords="149, 31, 202, 46" target="_top">
+<area href="http://www.bcl.com.au/perth/" shape="rect" coords="201, 31, 239, 47" target="_top">
+<area href="aboutbcl.htm" shape="default" target="_top">
+<area href="http://www.BCL.com.au/magazines/" shape="rect" coords="92, 65, 194, 87" target="_top">
+<area href="http://www.bcl.com.au/sydney/default.htm" shape="rect" coords="75, 44, 129, 62" target="_top">
+<area href="http://www.bcl.com.au/melbourne/" shape="rect" coords="130, 46, 194, 64" target="_top">
+<area href="http://www.bcl.com.au/canberra/" shape="rect" coords="194, 46, 250, 65" target="_top">
+<area href="http://www.bcl.com.au/hobart/" shape="rect" coords="251, 46, 294, 65" target="_top">
+<area href="http://www.bcl.com.au/darwin/" shape="rect" coords="239, 30, 288, 46" target="_top">
+<area href="http://www.BCL.com.au/business/" shape="rect" coords="195, 66, 283, 88" target="_top">
+<area href="http://www.BCL.com.au/aboutbcl.htm" shape="rect" coords="1, 1, 74, 97" target="_top">
+<area href="http://www.BCL.com.au/aboutbcl.htm" shape="rect" coords="76, 3, 299, 31" target="_top">
+</map>
+<img border="0" src="http://www.BCL.com.au/images/bclbrisbane.gif" usemap="#FPMap0_I1" width="300" height="100"></p>
+
+
+<!--webbot bot="Include" endspan i-checksum="32894" -->
+</td>
 <td width="50%"><h2><img src="lrbut.gif" alt="*" width="20" height="18">   BCL Privacy Policy</h2>
 </td></tr></tbody></table>
 
@@ -17,54 +37,41 @@
 <table cellpadding="10" width="100%" border="0"><tbody><tr valign="top">
 <td width="15%"><!--webbot bot="Include" U-Include="xbclmenu.htm" TAG="BODY" startspan -->
 
-<b><font color="#FF0000">Brisbane</font></b><br>
-<a href="wotsnew.htm">What's New</a><br>
-<a href="about.htm">About Brisbane</a><br>
-<a href="weather.htm">Weather</a><br>
-<a href="accom.htm">Accommodation</a><br>
-<a href="about/maps.htm">Maps</a>
+<b><font color="#FF0000">Australia</font></b><br>
+<a href="hotels.htm">Hotels</a><br>
+<a href="tours.htm">Tours &amp; Adventure</a>&nbsp;<br>
+<a href="studyabroad.htm">Study Abroad</a><br>
+<a href="http://www.rentnewcars.com.au/en/reservations.asp?afl=BCL">Car Hire</a><br>
+<a href="http://www.BCL.com.au/sydney/limohire.htm">Limo Hire</a>&nbsp;<br>
+<a href="subscribe.htm">Free Newsletter</a>
+
+
+
+
 <hr>
-<a href="wotson.htm">What's On</a><br>
-<a href="trans.htm">Transport</a><br>
-<a href="wotson/tours.htm">Tours &amp; Adventure<br>
-</a><a href="places/default.htm">Brisbane Places<br>
+
+
+
+<font color="#ff0000"><b> BCL sites</b></font><br>
+<a href="http://www.BCL.com.au/adelaide/">Adelaide</a>&nbsp;<br>
+<a href="http://www.BCL.com.au/bcl/">Brisbane</a>&nbsp;<br>
+<a href="http://www.BCL.com.au/canberra/">Canberra</a><br>
+<a href="http://www.BCL.com.au/darwin/">Darwin</a><br>
+<a href="http://www.BCL.com.au/goldcoast/">Gold Coast</a>&nbsp;<br>
+<a href="http://www.BCL.com.au/hobart/">Hobart</a><br>
+<a href="http://www.BCL.com.au/melbourne/">Melbourne</a><br>
+<a href="http://www.BCL.com.au/perth/">Perth</a>&nbsp;<br>
+<a href="http://www.BCL.com.au/sunshine-coast/">Sunshine Coast</a><br>
+<a href="http://www.BCL.com.au/sydney/">Sydney&nbsp;<br></a>
+&nbsp;<br>
+
+<a href="http://www.BCL.com.au/business/">BCL Business<br>
 </a>
-<a href="shop.htm">Shopping</a>
-<hr>
-<a href="intgroup.htm">Meeting People</a><br>
-<a href="wand.htm">Wine and Dine</a><br>
-<a href="weddings/default.htm">Weddings</a>&nbsp;<br>
-<a href="jobs.htm">Employment</a><br>
-<a href="business/health.htm">
-Health</a>
-<hr>
-<a href="business.htm">Business</a><br>
-<a href="help.htm">Help!</a><br>
-<a href="faq.htm">FAQ</a><br>
-<a href="movetobrisbane/default.htm">Moving here</a><br>
-<a href="realestate/default.htm">Real Estate</a>
-<hr>
-<a href="schools.htm">Education</a><br>
-<a href="training.htm">Training</a><br>
-<a href="elicos.htm">English Colleges</a>
-<a href="jobs.htm"><br>
-</a>
-<a href="sport/default.htm">Sport</a><br>
-<a href="views.htm">Brisbane Views</a>
-<hr>
-<a href="news.htm">City News</a><br>
-<a href="bcc.htm">Government</a><br>
-<a href="politics.htm">Politics</a><br>
-<a href="links.htm">Links</a><br>
-<a href="search.htm">
-Search BCL</a><br>
-<a href="links/searchengines.htm">Search Engines</a>
-<hr>
-<a href="subscribe.htm">Free Newsletters</a><a href="tellafriend.htm"><br>
-Tell a Friend</a><br>
-<a href="adverts.htm">Advertising</a><br>
-<a href="sitemap.htm">Sitemap</a><br>
-<a href="default.htm">BCL Brisbane Home</a>
+
+<a href="http://www.BCL.com.au/magazines/">BCL Magazines</a>
+
+&nbsp;<br>
+&nbsp;<img height="1" src="http://www.bcl.com.au/adelaide/images/blank.gif" width="120" border="0">
 
 
 
@@ -73,23 +80,15 @@ Tell a Friend</a><br>
 
 
 
-<font color="#ff0000">Other BCL sites</font><br>
-<a href="http://www.bcl.com.au/adelaide/">Adelaide City Life</a><br>
-<a href="http://www.bcl.com.au/darwin/">Darwin City Life</a><br>
-<a href="http://www.bcl.com.au/hobart/">Hobart City Life</a><br>
-<a href="http://www.bcl.com.au/melbourne/">Melbourne&nbsp;City&nbsp;Life</a><br>
-<a href="http://www.bcl.com.au/canberra/">Canberra City Life</a><br>
-<a href="http://www.bcl.com.au/sydney/">Sydney City Life<br></a>
-<a href="http://www.bcl.com.au/perth/">Perth City Life</a><br>
+<p><a href="advertising.htm">Advertising</a> <br>
+<a href="feedback.htm">Feedback</a></p>
 
-<p><img height="1" src="http://www.bcl.com.au/adelaide/images/blank.gif" width="120" border="0"></p>
-
-<!--webbot bot="Include" endspan i-checksum="48877" -->
+<!--webbot bot="Include" endspan i-checksum="16608" -->
 
 </td>
 
 <td width="70%">
-<h2><img src="lrbut.gif" alt="*" width="20" height="18">    Privacy Laws</h2>
+<h2><img src="lrbut.gif" alt="*" width="20" height="18">     Privacy Laws</h2>
 <p>For information on Australian Privacy laws, see <a href="http://www.privacy.gov.au">www.privacy.gov.au</a>&nbsp;</p>
 <h2><img src="lrbut.gif" alt="*" width="20" height="18">   Brisbane City Life - Web Site Cookies and Statistics</h2>
 <p>We ask for no personal details from users of Brisbane City Life web pages. Our server registers the following information which is used for general statistical purpose only.</p> 
@@ -128,22 +127,26 @@ is published by </b>
   <a href="http://www.maxlink.com.au/mms_home.htm"><b>Maxlink Media Services</b></a>
 <b>ABN 23 971 982 320</b><br>
  PO Box 2140, Strathpine Centre, Qld 4500.&nbsp;<br>
-  Phone (07) 3889 6800 - not for phone bookings for accommodation or tours.
-<br>&nbsp;<br>
-
-Please email any comments or reports of broken or inappropriate links to the Editor at <a href="mailto:bcl@brisbanecitylife.com.au">bcl@brisbanecitylife.com.au<br>
+  Phone (07) 3889 6800 - not for phone bookings for accommodation or tours, or
+for purchase of goods. Please follow the links to relevant suppliers.. Send
+comments or report of broken or inappropriate links <a href="contact.htm"> to the Editor<br>
 </a>
 <b>Disclaimer:</b><br>
-Inclusion in Brisbane City Life does not imply endorsement of any group, product or service. The publishers accept no liability for losses of any nature resulting from the use of information contained in Brisbane City Life.<br>
+Inclusion in the BCL website does not imply endorsement of any group, product or service. The publishers accept no liability for losses of any nature resulting from the use of information contained in
+BCL.<br>
   <b>Privacy Policy:<br>
   </b>We respect your privacy and your right to browse our pages without providing any personal information. For more information, see our <a href="privacy.htm"> privacy policy</a>. The minimum necessary information is required to use additional BCL services.<br>
 <b>Spam Policy:</b><br>
 BCL newsletters are opt-in, plain text emails. They never have attachments. For
-more, see our <a href="spam.htm">spam policy page</a><br>
+more, see our <a href="spam.htm">spam policy page</a>&nbsp;<br>
+<b>Advertising:&nbsp;<br>
+</b><a href="advertising.htm">Promote your business</a> to our established
+online audience.<br>
 <b>
 Copyright © 1995 - 2004</b>
 <br>
-These pages are copyright. Please see our page on <a href="links/linktobcl.htm"> linking and requests for permission</a> to use text or images from Brisbane City Life.</td>
+These pages are copyright. Please see our page on <a href="linktobcl.htm"> linking and requests for permission</a> to use text or images from
+BCL.</td>
 
 </tr>
 <tr valign="TOP">
@@ -154,7 +157,7 @@ These pages are copyright. Please see our page on <a href="links/linktobcl.htm">
 
 </tr>
 </tbody></table>
-<!--webbot bot="Include" endspan i-checksum="21368" -->
+<!--webbot bot="Include" endspan i-checksum="4718" -->
 
 
 
