--- a/e/ey/eyp/eyp.ph.html
+++ b/e/ey/eyp/eyp.ph.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eyp.ph privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603095846id_/http%3A//www.eyp.ph/complete.jsp%3Fpage%3D98) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eyp.ph privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204180603id_/http%3A//www.eyp.ph/complete.jsp%3Fpage%3D98) for the most accurate reproduction.-->
 
 <html><head>
 <title>EYP. Let your mouse do the walking.</title>
@@ -195,10 +195,10 @@ function setCriteria( dForm )
 <td width="1"><img src="http://images.eyp.ph/clear.gif" width="1"><form onsubmit="return setCriteria(this);" method="GET" action="/home/MainSearch">
 <input type="HIDDEN" name="v_listtype" value="2"><input type="HIDDEN" name="v_criteria" value=""><input type="HIDDEN" name="dummy" value=""><input type="HIDDEN" name="v_business_name" value=""></form></td><td width="100" align="right"><p><b>Look for</b></p></td>
 <td valign="top"><p>category (ex. banks)<br>
-<input type="text" name="param" size="20" maxlength="110" value="" onblur="searchfilter(this);"></p></td>
+<input type="text" name="param" size="20" maxlength="110" value="fashion accessories" onblur="searchfilter(this);"></p></td>
 <td align="center"><p><b>or</b></p></td>
 <td valign="top"><p>business name (ex. BPI)<br>
-<input type="text" name="param" size="20" maxlength="100" value="national bookstore" onblur="searchfilter(this);"></p></td>
+<input type="text" name="param" size="20" maxlength="100" value="" onblur="searchfilter(this);"></p></td>
 <td valign="middle" align="center"><p><b>in</b></p></td>
 <td valign="top"><p>location<br>
 <select name="v_location">
