--- a/q/qu/qui/quickhire.com.html
+++ b/q/qu/qui/quickhire.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the quickhire.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602193542id_/http%3A//www.quickhire.com/policies/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the quickhire.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204180910id_/http%3A//quickhire.com/policies/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<title>Welcome to QuickHire</title>
@@ -520,13 +520,13 @@ This privacy statement discloses the privacy practices for QuickHire, Inc. If yo
 	</tr>
 	<tr>
 		<td colspan="1" rowspan="6" align="left" valign="top" background="/_images/global/rightColumn/rs_tileDots.gif"><img src="/_images/spacer.gif" width="10" height="1"></td>
-		<td colspan="1" rowspan="1" align="center" valign="top"><img src="/stories/data/logos/hennepin.gif" border="0" alt="Hennepin County" vspace="2"></td>
+		<td colspan="1" rowspan="1" align="center" valign="top"><img src="/stories/data/logos/usgs.gif" border="0" alt="U.S. Geological Survey" vspace="2"></td>
 	</tr>
 	<tr>
-		<td colspan="1" rowspan="1" align="center" valign="top" class="bugcopy">Hennepin County gets the edge in hiring.</td>
+		<td colspan="1" rowspan="1" align="center" valign="top" class="bugcopy">U.S. Geological Survey reaches new plateaus with QuickHire.</td>
 	</tr>
 	<tr>
-		<td colspan="1" rowspan="1" align="center" valign="top"><a href="/stories/index.php?oid=2.2" class="bugcopy"><b>More</b>&nbsp;<img src="/_images/global/doubleCarrots.gif" border="0"></a></td>
+		<td colspan="1" rowspan="1" align="center" valign="top"><a href="/stories/index.php?oid=1.31" class="bugcopy"><b>More</b>&nbsp;<img src="/_images/global/doubleCarrots.gif" border="0"></a></td>
 	</tr>
 	<tr>
 		<td colspan="1" rowspan="1" align="center" valign="top" class="bugcopy">&nbsp;</td>
