--- a/e/ex/exc/exchangerate.com.html
+++ b/e/ex/exc/exchangerate.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the exchangerate.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607035301id_/http%3A//www.exchangerate.com/privacy_security.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the exchangerate.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181328id_/http%3A//exchangerate.com/privacy_security.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy &amp; Security</title>
@@ -42,16 +42,24 @@ function load_taf(tafurl)
 <td colspan="3">
 <table cellpadding="0" cellspacing="0" border="0" width="617" height="60">
 <tbody><tr>
-<td width="468"><!-- TF 468x60 JScript NoPop code --><center>
-<script language="javascript">
+<td width="468"><!-- TF 468x60 JScript NoPop code -->
+<center>
+<script language="JavaScript">
 <!--
+function SymError()
+	{
+	return true;
+	}
+window.onerror = SymError;
+//-->
+</script>
+<script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=ExchangeRatecom&adSpace=ROS&size=468x60&pop=0&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExchangeRatecom&amp;adSpace=ROS&amp;size=468x60&amp;pop=0&amp;requestID=15992701630.937084967078047"></script>
-<noscript>
-<a href="http://a.tribalfusion.com/i.click?site=ExchangeRatecom&adSpace=ROS&size=468x60&requestID=311730536" target=_blank><img src="http://a.tribalfusion.com/i.ad?site=ExchangeRatecom&adSpace=ROS&size=468x60&requestID=311730536" width=468 height=60 border=0 alt="Click Here"></a>
-</noscript>
-</center><!-- TF 468x60 JScript NoPop code --></td>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=ExchangeRatecom&amp;adSpace=ROS&amp;size=468x60&amp;pop=0&amp;requestID=15992706170.8479086015847828"></script><noscript><a href="http://a.tribalfusion.com/i.click?site=ExchangeRatecom&adSpace=ROS&size=468x60&requestID=1151711444" target=_blank><img src="http://a.tribalfusion.com/i.ad?site=ExchangeRatecom&adSpace=ROS&size=468x60&requestID=1151711444" width=468 height=60 border=0 alt="Click Here"></a></noscript>
+</center>
+<!-- TF 468x60 JScript NoPop code -->
+</td>
 <td valign="top" width="4">&nbsp;</td>
 <td width="145" height="60" valign="middle" bgcolor="#4A7163">
 <center>
@@ -178,17 +186,17 @@ document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.
 </tr>
 
 <tr>
-<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4006" target="_new" onmouseover="window.status='http://exchangerate.com/real_time_charts.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>Real-Time Charts</b></font></a></nobr>
+<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4021" target="_new" onmouseover="window.status='http://exchangerate.com/real_time_quotes.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>Real-Time Quotes</b></font></a></nobr>
 </td>
 </tr>
 
 <tr>
-<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4007" target="_new" onmouseover="window.status='http://exchangerate.com/free_forex_demo.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>Free Forex Demo</b></font></a></nobr>
+<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4022" target="_new" onmouseover="window.status='http://exchangerate.com/free_forex_guide.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>Free Forex Guide</b></font></a></nobr>
 </td>
 </tr>
 
 <tr>
-<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4008" target="_new" onmouseover="window.status='http://exchangerate.com/about_fxcm.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>About FXCM</b></font></a></nobr>
+<td bgcolor="#0E3577"><nobr><a href="/cgi-images/nph-rd3.cgi?r=4023" target="_new" onmouseover="window.status='http://exchangerate.com/fxcm_trading_course.html';return true;" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>FX Trading Course</b></font></a></nobr>
 </td>
 </tr>
 
@@ -258,13 +266,6 @@ function addBookmark() {
 <td bgcolor="#0E3577"><nobr><a href="quiz_scores_entry.html" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>XR Quiz Scoreboard</b></font></a></nobr>
 </td>
 </tr>
-
-<!--
-<TR>
-<TD BGCOLOR="#0E3577"><NOBR><A TARGET="Store_Window" HREF="http://store.exchangerate.com/shopping/" CLASS="STYLE1" ID="boxa"><FONT FACE="Verdana, Helvetica, Arial" SIZE="1"><B>Shop @ XR Store</B>&#153;</FONT></NOBR></A>
-</TD>
-</TR>
--->
 
 <tr>
 <td bgcolor="#0E3577"><nobr><a href="registration.html" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Arial" size="1"><b>Register With XR</b></font></a></nobr>
@@ -339,24 +340,10 @@ function addBookmark() {
 <td align="CENTER"><font face="Verdana, Helvetica, Arial" size="1" color="#FFFFFF"><b>SMART TRAVELLERS</b></font></td>
 </tr>
 
-<!--
-<TR>
-<TD BGCOLOR="#0E3577"><FONT FACE="Verdana, Helvetica, Trebuchet, Arial" SIZE="1"><A ID="boxa" HREF="travel_warnings_entry.html"><B>XR Travel Warnings</B>&#153;</A></FONT>
-</TD>
-</TR>
--->
-
 <tr>
 <td bgcolor="#0E3577"><font face="Verdana, Helvetica, Trebuchet, Arial" size="1"><a id="boxa" href="country_info_entry.html"><b>XR Country Info</b>™</a></font>
 </td>
 </tr>
-
-<!--
-<TR>
-<TD BGCOLOR="#0E3577"><NOBR><A TARGET="Store_Window" HREF="http://store.exchangerate.com/shopping/" CLASS="STYLE1" ID="boxa"><FONT FACE="Verdana, Helvetica, Arial" SIZE="1"><B>Shop @ XR Store</B>&#153;</FONT></NOBR></A>
-</TD>
-</TR>
--->
 
 </tbody></table>
 </td>
@@ -376,19 +363,6 @@ function addBookmark() {
 <tbody><tr>
 <td align="CENTER"><font face="Verdana, Helvetica, Arial" size="1" color="#FFFFFF"><b>FOR BUSINESS</b></font></td>
 </tr>
-
-<!--
-<TR>
-<TD BGCOLOR="#0E3577"><A HREF="fxpayment.html" CLASS="STYLE1" ID="boxa"><FONT FACE="Verdana, Helvetica, Trebuchet, Arial" SIZE="1"><B>FX Payment Service</B></FONT></A>
-</TD>
-</TR>
-
-<TR>
-<TD BGCOLOR="#0E3577"><A HREF="spotfx.html" CLASS="STYLE1" ID="boxa"><FONT FACE="Verdana, Helvetica, Trebuchet, Arial" SIZE="1"><B>FX Trading</B></FONT></A>
-</TD>
-</TR>
--->
-
 
 <tr>
 <td bgcolor="#0E3577"><a href="data_feeds.html" class="STYLE1" id="boxa"><font face="Verdana, Helvetica, Trebuchet, Arial" size="1"><b>Data Feeds</b></font></a>
@@ -434,7 +408,8 @@ function addBookmark() {
 
 <!--End Box Menu 5 -->
 
-<!--END MENU--></td>
+<br>
+<br><!--END MENU--></td>
 <td valign="TOP"><img src="images/spacer.gif" width="4" height="1" border="0"></td>
 <td valign="TOP" width="468"><table cellpading="1" cellspacing="0" width="100%" border="0" bgcolor="#000000">
 <tbody><tr>
@@ -606,11 +581,10 @@ uses are expressly unauthorized and prohibited to the maximum extent allowed by 
 </tbody></table>
 </td>
 
-<td valign="TOP"><table valign="TOP" width="125" height="125" border="0" cellspacing="0" cellpadding="0">
+<td valign="TOP"><table valign="TOP" width="125" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td align="CENTER">
-<br>
-</td>
+<td>&nbsp;&nbsp;&nbsp;</td>
+<td align="CENTER" valign="TOP"><a onmouseover="window.status='http://FrequentFlowers.com';return true;" onmouseout="window.status='';return true;" target="_new" href="http://209.70.188.106/cgi-images/nph-rd4.cgi?r=5012"><img width="120" height="240" src="http://209.70.188.106/images/ads/ff_120x240_static_01.gif"></a></td>
 </tr>
 </tbody></table>
 
@@ -620,20 +594,21 @@ uses are expressly unauthorized and prohibited to the maximum extent allowed by 
 <tbody><tr>
 <td>&nbsp;&nbsp;&nbsp;</td>
 <td align="RIGHT">
-<!-- Creative for 120 x 600 format -->
-<script type="text/javascript" language="JavaScript">
-<!--
-         google_ad_client = 'exchangerate_120x600';
-         google_ad_width = 120;
-         google_ad_height = 600;
-         google_ad_format = '120x600_sln';
-         google_safe = 'high';
-// -->
+<script type="text/javascript"><!--
+google_ad_client = "pub-4135811908727858";
+google_alternate_ad_url = "http://209.70.188.106/tribalfusion_120x600_code.htm";
+google_ad_width = 120;
+google_ad_height = 600;
+google_ad_format = "120x600_as";
+google_ad_channel ="8466765841";
+google_color_border = "000000";
+google_color_bg = "F0F0F0";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<script type="text/javascript" language="JavaScript" src="http://pagead2.googlesyndication.com/pagead/show_scraped_ads.js"></script>
-<noscript>
-<img height=1 width=1 border=0 src="http://pagead2.googlesyndication.com/pagead/imp.gif?client=ca-exchangerate_120x600&event=noscript"/>
-</noscript>
 </td>
 </tr>
 </tbody></table>
