--- a/b/bl/blu/bluechillies.com.html
+++ b/b/bl/blu/bluechillies.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bluechillies.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602214712id_/http%3A//www.bluechillies.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bluechillies.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181448id_/http%3A//www.bluechillies.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>BlueChillies.com - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -40,7 +40,7 @@ defaultStatus="Don't forget to bookmark this page! (Press Ctrl-D)"
 <a href="/home/W/"><img src="/i/top.gif" width="154" height="64" border="0" alt="BlueChillies.com"></a><br>
 <a href="/my.html"><img src="/i/my.gif" width="154" height="31" alt="my BlueChillies" border="0"></a></td>
 <td width="85%" valign="top" bgcolor="#F8D60F"><img src="/i/s.gif" width="1" height="4"><br>
-<table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="60"><a href="/adclick.php?id=165" onmouseover="window.status='http://www.photodex.com/entry/products/proshow/?i=7259';return true;"><img src="/i/proshow.gif" width="468" height="60" border="0" alt="Click Here!"></a></td></tr></tbody></table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="60"><a href="/adclick.php?id=144" onmouseover="window.status='http://www.ymec.com/hp/signal2/index.htm';return true;"><img src="/i/ymec.gif" width="468" height="60" border="0" alt="Click Here!"></a></td></tr></tbody></table>
 <img src="/i/s.gif" width="1" height="8"><br>
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
@@ -137,7 +137,7 @@ If you have any questions about this privacy statement, the practices of this si
 </small></td></tr></tbody></table>
 </td>
 <td width="135" valign="top" bgcolor="#00AA00"><table width="100%" border="0" cellspacing="6" cellpadding="0"><tbody><tr><td>
-<font color="#FFFFCC"><b>Featured<br>Downloads in<br>this Section</b></font></td></tr><tr><td><a class="rightbar" href="/details/5753.html">Winslow Homer Art Collection</a></td></tr><tr><td><a class="rightbar" href="/details/5755.html">Michelangelo's Sistine Chapel</a></td></tr><tr><td><a class="rightbar" href="/details/1438.html">Art of Vermeer</a></td></tr><tr><td><a class="rightbar" href="/details/5752.html">Hokusai Art Collection</a></td></tr><tr><td><a class="rightbar" href="/details/4834.html">Orb Rush</a></td></tr><tr><td><a class="rightbar" href="/details/5778.html">French Impressionism Collection</a></td></tr><tr><td><a class="rightbar" href="/details/9021.html">GeekAlarm!</a></td></tr><tr><td><a class="rightbar" href="/details/4586.html">Need For Eat</a><br><br>
+<font color="#FFFFCC"><b>Featured<br>Downloads in<br>this Section</b></font></td></tr><tr><td><a class="rightbar" href="/details/5763.html">Sir Lawrence Alma-Tadema Art Collection</a></td></tr><tr><td><a class="rightbar" href="/details/5798.html">Yellowstone National Park</a></td></tr><tr><td><a class="rightbar" href="/details/6966.html">TimelyWeb</a></td></tr><tr><td><a class="rightbar" href="/details/3659.html">RegSpy</a></td></tr><tr><td><a class="rightbar" href="/details/5865.html">MP3 Butcher</a></td></tr><tr><td><a class="rightbar" href="/details/13761.html">CallBlocker</a></td></tr><tr><td><a class="rightbar" href="/details/13808.html">American Air Power</a></td></tr><tr><td><a class="rightbar" href="/details/5760.html">Rembrandt Art Collection</a><br><br>
 <img src="/i/ymec_icon.gif" border="0" align="left" width="32" height="32"><img src="/i/s.gif" border="0" align="left" width="1" height="32">
 <a href="/details/10121.html"><small>DSSF3 Basic</small></a><br>
 <font size="1" color="#FFFFFF">The free version of the advanced sound measurement software DSSF3 is now available. It consists of the signal generator, sound recorder and player, and the peak level meter.</font><br><a href="/download.html?sid=10121"><small>Download Now!</small></a><br><br>
@@ -146,10 +146,10 @@ If you have any questions about this privacy statement, the practices of this si
 <a href="http://www.vpainter.com/"><small>Virtual Painter 4.0</small></a><br>
 <font size="1" color="#FFFFFF">Turn your photos into beautiful paintings with just a few mouse clicks featuring a wide variety of painting styles and surfaces. This new version gives you 3 options - a stand alone version, a plug-in, or the Deluxe version that is BOTH!</font><br><a href="http://www.vpainter.com/files/vp4eval.exe"><small>Download Now!</small></a><br><br>
 
-<img src="/i/icons/16092.gif" border="0" align="left" width="32" height="32"><img src="/i/s.gif" border="0" align="left" width="1" height="32">
-<a href="/details/16092.html"><small>AD Alpine Lake</small></a><br>
-<font size="1" color="#FFFFFF">High mountains with the peaks in clouds, with snow-covered tops always cause inexplicable feeling of delight and pleasure. But they help to catch philosophical mood, give calm and strong sensation of freedom. But all this you could feel only when 
-...</font><br><a href="/download.html?sid=16092"><small>Download Now!</small></a><br><br>
+<img src="/i/icons/11280.gif" border="0" align="left" width="32" height="32"><img src="/i/s.gif" border="0" align="left" width="1" height="32">
+<a href="/details/11280.html"><small>MicroLocked</small></a><br>
+<font size="1" color="#FFFFFF">MicroLocked is a small, easy to setup, security program that locks your computer while leaving the display visible. Once locked your system can not be accessed until the unlock password is entered. Your system screen saver can be used normally or 
+...</font><br><a href="/download.html?sid=11280"><small>Download Now!</small></a><br><br>
 
 
 </td></tr></tbody></table></td>
