--- a/a/al/all/allfreethings.com.html
+++ b/a/al/all/allfreethings.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allfreethings.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604061424id_/http%3A//allfreethings.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allfreethings.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181620id_/http%3A//www.allfreethings.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Our Privacy Policy</title>
@@ -20,8 +20,8 @@ i=u+x+'&sid='+id+'&m=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_top">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=3269&amp;m=1&amp;f=b&amp;v=1.4&amp;c=4644&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=3269&m=1&c=4644"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=3269&m=1&f=b&v=1.4&c=4644&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=s&amp;sid=3269&amp;m=1&amp;f=b&amp;v=1.4&amp;c=1083&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=3269&m=1&c=1083"  target="_top"><img src="http://media.fastclick.net/w/get.media?t=s&sid=3269&m=1&f=b&v=1.4&c=1083&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=3269&m=1&c=1"  target="_top">
