--- a/t/ta/tam/tamu.edu.html
+++ b/t/ta/tam/tamu.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tamu.edu privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605102712id_/http%3A//www.tamu.edu/00/data/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tamu.edu privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181746id_/http%3A//www.tamu.edu/00/data/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -95,7 +95,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       <table width="100%" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr> 
           <td align="left"><font color="white"><div class="ddate">
-            Saturday,  June  5, 2004</div></font></td>
+            Saturday,  December  4, 2004</div></font></td>
           
         <td align="right" valign="top"><img src="../images/grad_top.gif" alt="bar" width="126" height="20" border="0" usemap="#Map"></td>
         </tr>
@@ -109,12 +109,12 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
       <area shape="rect" coords="114,3,167,21" href="http://courses.tamu.edu/" alt="Link to Courses">
       <area shape="rect" coords="174,2,206,20" href="http://www.tamu.edu/00/map/" alt="Link to Maps">
       <area shape="rect" coords="214,2,256,21" href="http://www.tamu.edu/directory/" alt="Link to People Directory">
-      <area shape="rect" coords="262,1,311,22" href="http://search.tamu.edu/" alt="Link to Search Engine">
+      <area shape="rect" coords="262,1,311,22" href="http://www.google.com/univ/tamu" alt="Link to Search Engine">
     </map></td>
     <td bgcolor="#83253C" rowspan="2"><img src="../images/spacer.gif" width="1" height="98" alt=""></td>
   </tr>
   <tr> 
-    <td colspan="4" bgcolor="#FFFFFF" valign="top"><img src="http://www.tamu.edu/00/images/data.jpg" width="325" height="78" alt="Campus Shots"></td>
+    <td colspan="4" bgcolor="#FFFFFF" valign="top"><img src="http://www.tamu.edu/00/images/academic.jpg" width="325" height="78" alt="Campus Shots"></td>
   </tr>
   <tr> 
     <td colspan="8" bgcolor="#FFFFFF"><img src="../images/index2_04.gif" width="651" height="13" alt=""></td>
@@ -139,15 +139,15 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </tr>
         <tr> 
           <td class="linclude"><font face="Verdana,Arial" size="2"> 
-            <div class="lnews">New Ventures/Entrepreneurship Center Names New Leaders</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Scheurich Is New Educational Administration Department Head</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Mathematics Symposium Draws Worldwide Audience</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Lawrence Named Holder Of Hubbell Professorship</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Despite High Water Levels, East Texas Ponds Oxygen Depleted</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div align="right"><a href="http://www.tamu.edu/aggiedaily/"><img src="http://www.tamu.edu/00/images/more.gif" width="39" height="16" alt="More" border="0"></a></div></font>
+            <div class="lnews">Proof Positive: Mars Once Had Water, Researchers Conclude</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Anderson Talks About Learning At First Friday Lecture</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Funeral Services For Raymond Battalio Set For Sunday</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Biological Clock Researchers To Meet At Texas A&amp;M Dec. 4</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div class="lnews">Perry Appoints Rayburn To Marine Fisheries Commission</div><img src="http://www.tamu.edu/00/images/sep.gif" width="100%" height="6" alt=""><div align="right"><a href="http://www.tamu.edu/aggiedaily/"><img src="http://www.tamu.edu/00/images/more.gif" width="39" height="16" alt="More" border="0"></a></div></font>
           </td>
           <td width="14" bgcolor="#ffffff">&nbsp;</td>
         </tr>
         <tr> 
-          <td bgcolor="#ffffff"><br><a href="http://www.tamu.edu/univrel/events/" onmouseover="xmouserIn(2); return true;" onmouseout="xmouserOut(2); return true;"><img src="../images/indexc_10.gif" width="188" height="24" alt="Coming Events" border="0" name="www2"></a></td><td width="14" bgcolor="#ffffff">&nbsp;</td>
+          <td bgcolor="#ffffff"><br><a href="http://www.tamu.edu/univrel/events/"><img src="../images/indexc_10.gif" width="188" height="24" alt="Coming Events" border="0" name="www2"></a></td><td width="14" bgcolor="#ffffff">&nbsp;</td>
         </tr>
         <tr> 
-          <td class="linclude"> <font face="Verdana,Arial" size="2"><div class="llink"><a href="http://www.tamu.edu/admissions/records/academic_calendar.html"><b>Academic Calendar</b></a></div><br><div class="llink"><a href="http://hr.tamu.edu/benefits/holidays.html"><b>University Holidays</b></a></div><br><div class="llink"><a href="http://www.tamu.edu/calendar/search.php?searchcal=Jun.2004"><b>Web Calendar</b></a></div><br><div align="right"><a href="http://www.tamu.edu/univrel/events/"><img src="http://www.tamu.edu/00/images/more.gif" width="39" height="16" alt="More" border="0"></a></div></font> 
+          <td class="linclude"> <font face="Verdana,Arial" size="2"><div class="llink"><a href="http://www.tamu.edu/admissions/records/academic_calendar.html"><b>Academic Calendar</b></a></div><br><div class="llink"><a href="http://hr.tamu.edu/benefits/holidays.html"><b>University Holidays</b></a></div><br><div class="llink"><a href="http://www.tamu.edu/calendar/"><b>Web Calendar</b></a></div><br><div align="right"><a href="http://www.tamu.edu/univrel/events/"><img src="http://www.tamu.edu/00/images/more.gif" width="39" height="16" alt="More" border="0"></a></div></font> 
           </td>
           <td width="14" bgcolor="#ffffff">&nbsp;</td>
         </tr>
@@ -234,10 +234,11 @@ Helvetica, sans-serif"><img src="../images/tamuseal.jpg" width="98" height="98" 
                 of this site, or your use of this Web site, please contact the 
                 <a href="mailme.html">Webmaster</a> or 
                 through regular mail at: </font></p>
-              <p align="left"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Office 
+              <p align="left"><font size="2" face="Verdana, Arial, Helvetica, sans-serif">Texas A&amp;M University <br>
+                Office 
                 of University Relations<br>
                 Attention: Webmaster<br>
-                201 Bizzell Hall East, MS 1372<br>
+                202 Bizzell Hall East, MS 1372<br>
                 College Station, TX 77843-1372</font></p>
               <p align="left"></p>
               <p align="left"></p>
