--- a/b/ba/ban/bankofoklahoma.com.html
+++ b/b/ba/ban/bankofoklahoma.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bankofoklahoma.com privacy policy that was archived on 2004-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040612044818id_/http%3A//bankofoklahoma.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bankofoklahoma.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181933id_/http%3A//bankofoklahoma.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>PRIVACY POLICY</title>
@@ -30,7 +30,7 @@
 <tbody><tr>
 <td valign="top" width="372" height="78" rowspan="4" bgcolor="#990000"><a href="/"><img src="/gfx/swooshlogobok.gif" width="372" height="78" border="0"></a></td>
 <td valign="top" width="110" height="31" rowspan="2" bgcolor="#990000"><img src="/gfx/swooshright.gif" border="0"></td>
-<td height="22" width="100%" bgcolor="#000000" class="white" align="right" nowrap=""><small><a href="/employment" class="white">Jobs</a> | <a href="/sitemap" class="white">Search</a> | <a href="/contact" class="white">Contact</a> | <a href="http://go.vicinity.com/bankota/prxStart.dsp" class="white">Locations</a>&nbsp;&nbsp;</small></td>
+<td height="22" width="100%" bgcolor="#000000" class="white" align="right" nowrap=""><small><a href="/employment" class="white">Jobs</a> | <a href="/sitemap" class="white">Search</a> | <a href="/contact" class="white">Contact</a> | <a href="http://clients.mapquest.com/bankofoklahoma/mqlocator?link=find" class="white">Locations</a>&nbsp;&nbsp;</small></td>
 </tr>
 
 <tr>
@@ -87,7 +87,7 @@
 <option value="https://www.bankofoklahoma.com/personal/mortgage/loanapp/">Mortgage</option>
 <option value="https://www.bankofoklahoma.com/personal/loans/app/">Loans and Lines</option>
 <option>****BUSINESS****</option>
-<option value="/smallbusiness/online/default.asp">Online Banking</option>
+<option value="/smallbusiness/online/default.asp">Online Banking &amp; BillPay</option>
 <option value="https://netconnect.bokf.com/">NetConnect</option>
 </select>
 </td>
@@ -114,7 +114,7 @@
 <td width="170" valign="top" rowspan="2">
 <!---COLUMN ONE BEGIN--->
 <table cellspacing="0" cellpadding="0" border="0" width="170">
-<!---BE SURE TO PICK IMAGE TEMPLATE---><tbody><tr><td width="170"><img src="/img/ppl03.jpg" border="0" alt=""></td><td width="10"></td></tr><!---BUTTONS BEGIN HERE---><!---BUTTONS END HERE---><tr><td height="10" colspan="2"></td></tr>
+<!---BE SURE TO PICK IMAGE TEMPLATE---><tbody><tr><td width="170"><img src="/img/webtemp09.jpg" border="0" alt=""></td><td width="10"></td></tr><!---BUTTONS BEGIN HERE---><!---BUTTONS END HERE---><tr><td height="10" colspan="2"></td></tr>
 </tbody></table>
 <!---COLUMN ONE END--->
 </td>
@@ -141,7 +141,7 @@
 <option value="/personal/pfs/">Private Fin. Serv.</option>
 <option value="/personal/savings/">Savings</option>
 <option value="/personal/student/">Student Info</option>
-<option value="/personal/turbotax/">Taxes</option>
+
 <option value="/personal/trust/">Trust &amp; Inv. Mgmt</option>
 <option value="/personal/checkcards/">VISA Check Card</option>
 </select>
@@ -158,7 +158,7 @@
 <option value="/smallbusiness/bankinggroup/">&nbsp;&nbsp;(sales $1-10 million)</option>
 <option value="/smallbusiness/bankinggroup/loans.asp#sba">SBA Loans</option>
 <option value="/smallbusiness/online/">Online Banking</option>
-<option value="/smallbusiness/retirement/">Retirement Services</option>
+<option value="/commercial/retirement/">Retirement Services</option>
 <option value="http://www.boscinc.com/">Investments</option>
 </select>
 </td>
@@ -326,7 +326,7 @@ Keeping your account information
 <img src="/gfx/spacer.gif" border="0" width="1" height="1">
 </td>
 <td align="right" width="370" nowrap="" valign="top">
-<small><a href="/employment" class="black">Jobs</a> | <a href="/sitemap" class="black">Search</a> | <a href="/contact" class="black">Contact</a> | <a href="http://go.vicinity.com/bankota/prxStart.dsp" class="black">Locations</a> |  <a href="/privacy.asp" class="black">Privacy</a> | <a href="/investor" class="black">Investor Info</a>&nbsp;&nbsp;</small>
+<small><a href="/employment" class="black">Jobs</a> | <a href="/sitemap" class="black">Search</a> | <a href="/contact" class="black">Contact</a> | <a href="http://clients.mapquest.com/bankofoklahoma/mqlocator?link=find" class="black">Locations</a> |  <a href="/privacy.asp" class="black">Privacy</a> | <a href="/investor" class="black">Investor Info</a>&nbsp;&nbsp;</small>
 </td>
 </tr>
 <tr>
