--- a/r/ra/rad/radicalplay.com.html
+++ b/r/ra/rad/radicalplay.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the radicalplay.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607060020id_/http%3A//www.radicalplay.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the radicalplay.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204182604id_/http%3A//radicalplay.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
