--- a/c/cr/cre/creativegood.com.html
+++ b/c/cr/cre/creativegood.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the creativegood.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607034230id_/http%3A//www.creativegood.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the creativegood.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204182617id_/http%3A//www.creativegood.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 
@@ -107,7 +107,7 @@ The privacy of your nonpublic information is important to us. This includes, but
 <table width="700" cellpadding="6" cellspacing="0" border="0">
 <tbody><tr><td width="100%" align="center" bgcolor="#F3F3E8">
 <div class="smallgray">
-©2003 Creative Good, Inc. &nbsp; <a href="javascript:mailer('good','creativegood.com')">good at creativegood dot com</a> &nbsp; +1.212.736.2075
+©2004 Creative Good, Inc. &nbsp; <a href="javascript:mailer('contact','creativegood.com')">contact at creativegood dot com</a> &nbsp; +1.212.736.2075
 </div>
 </td></tr>
 </tbody></table>
