idp.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 11474,
  "classifier_probability": 0.9,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.46,
  "homepage_snapshot_redirected_domain": "idp.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929100134id_/http://www.idp.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929100134id_/http%3A//idp.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "idp.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204183612id_/http%3A//www.idp.com/information/article21.asp",
  "policy_title": "IDP Portal - Privacy Policy",
  "policy_url": "idp.com/information/article21.asp",
  "sha1": "5b3e15a1c0b3d2cc6215e69063fd68aa17ddddf2",
  "simhash": 5582298012252256863,
  "simhash_updated": true,
  "site_hostname": "idp.com",
  "site_url": "http://idp.com",
  "smog": 15.56,
  "strict_updated": true,
  "timestamp": "20041204183612",
  "word_count": 1726,
  "year": 2004
}

--- a/i/id/idp/idp.com.html
+++ b/i/id/idp/idp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the idp.com privacy policy that was archived on 2004-04-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040404130314id_/http%3A//www.idp.com/information/article21.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the idp.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204183612id_/http%3A//www.idp.com/information/article21.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>IDP Portal - Privacy Policy</title><meta name="robots" content="index,follow"><meta name="description" content="Privacy Policy, "><meta name="keywords" content="IDP, Education"><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -43,32 +43,52 @@ function MM_swapImage() { //v3.0
 <td width="184" height="187" rowspan="4" valign="top"><a href="http://www.idp.com"><img src="../images/logo2.gif" width="184" height="187" border="0" alt="IDP - YOUR FIRST CHOICE GLOBAL PARTNER IN EDUCATION AND DEVELOPMENT"></a></td>
 <td height="40" valign="top">
             <table width="581" border="0" cellspacing="0" cellpadding="0" height="40">
-              <tbody><tr align="left" valign="top"> 
+              <tbody><tr align="left" valign="bottom"> 
+
+            <td width="115">
+                    <span class="navigation"><a href="http://students.idp.com">Students</a></span>
+            </td>
+            <td width="115">
+                    <span class="navigation"><a href="http://www.idp.com/globalexaminationservices/">Examinations</a></span>
+            </td>
+            <td width="115">
+                    <span class="navigation"><a href="http://www.idp.com/internationaldevelopment/">Development</a></span>
+            </td>
+            <td width="115">
+                    <span class="navigation"><a href="http://research.idp.com/">Research</a></span>
+            </td>
+            <td width="115">
+                    <span class="navigation"><a href="http://www.idp.com/aboutidp/">Corporate</a></span>
+            </td>
+
+
+   <!-- 
                 <td width="120">
-                    <a href="/internationalstudentservices/article14.asp" onmouseover="changeImages('students', '/images/students_on.gif'); return true;" onmouseout="changeImages('students', '/images/students.gif'); return true;">
-                      <img name="students" alt="International Student Services" src="/images/students.gif" width="120" height="40" border="0">
+                    <a href="http://students.idp.com" onMouseOver="changeImages('students', '/images/students_on.gif'); return true;"
+	         onMouseOut="changeImages('students', '/images/students.gif'); return true;">
+                      <img name="students" alt="International Student Services" src="/images/students.gif" width="120" height="40" border="0" />
+                    </a> 
+                </td>
+
+
+                <td width="115">
+                    <a href="/globalexaminationservices" onMouseOver="changeImages('examination', '/images/examination_on.gif'); return true;"
+                      onMouseOut="changeImages('examination', '/images/examination.gif'); return true;"> 
+                      <img name="examination" alt="Global Examination Services" src="/images/examination.gif" width="115" height="40" border="0" />
                     </a> 
                 </td>
                 <td width="115">
-                    <a href="/internationaldevelopment" onmouseover="changeImages('development', '/images/development_on.gif'); return true;" onmouseout="changeImages('development', '/images/development.gif'); return true;"> 
-                      <img name="development" alt="International Development" src="/images/development.gif" width="115" height="40" border="0">
+                    <a href="/internationaldevelopment" onMouseOver="changeImages('development', '/images/development_on.gif'); return true;"
+	         onMouseOut="changeImages('development', '/images/development.gif'); return true;"> 
+                      <img name="development" alt="International Development" src="/images/development.gif" width="115" height="40" border="0" />
                     </a> 
                 </td>
                 <td width="115">
-                    <a href="/globalexaminationservices/article16.asp" onmouseover="changeImages('examination', '/images/examination_on.gif'); return true;" onmouseout="changeImages('examination', '/images/examination.gif'); return true;"> 
-                      <img name="examination" alt="Global Examination Services" src="/images/examination.gif" width="115" height="40" border="0">
+                    <a href="/aboutidp" onMouseOver="changeImages('corporate', '/images/development_on.gif'); return true;"
+	         onMouseOut="changeImages('corporate', '/images/development.gif'); return true;"> 
+                      <img name="corporate" alt="corporate" src="/images/development.gif" width="115" height="40" border="0" />
                     </a> 
-                </td>
-                <td width="115">
-                    <a href="/marketingandresearch/article17.asp" onmouseover="changeImages('marketing', '/images/marketing_on.gif'); return true;" onmouseout="changeImages('marketing', '/images/marketing.gif'); return true;"> 
-                      <img name="marketing" alt="Marketing and Research" src="/images/marketing.gif" width="115" height="40" border="0">
-                    </a> 
-                </td>
-                <td width="116">
-                    <a href="/graduateservices/article18.asp" onmouseover="changeImages('graduate', '/images/graduate_on.gif'); return true;" onmouseout="changeImages('graduate', '/images/graduate.gif'); return true;"> 
-                      <img name="graduate" alt="Graduate Services" src="/images/graduate.gif" width="116" height="40" border="0">
-                    </a>
-                </td>
+                </td>-->
               </tr>
             </tbody></table>
 
@@ -94,15 +114,25 @@ Information</td>
 <tbody><tr align="left" valign="top">
 <td width="5" rowspan="2"><img src="../images/spacer.gif" width="5" height="15"></td>
 <td height="65" valign="top" width="150">
-<a href="/redirect.asp?url=http://idp.studylink.com.au"><img alt="SEARCH for your course and APPLY ONLINE" src="/images/applyonline.gif" width="122" height="65" border="0"></a>
+<a href="/redirect.asp?url=http://idp.studylink.com.au"> <img alt="SEARCH for your course and APPLY ONLINE" src="/images/apply.gif" border="0"></a>
 <br><a href="/redirect.asp?url=http://idp.studylink.com.au/search/search.html"><font size="1"><b>Course Search</b></font></a>
+
+
 
 </td>
 <td valign="top" align="left" height="65">
-            &nbsp;&nbsp;<a class="menu" href="/default.asp">IDP Home</a>&nbsp;|&nbsp;<a class="menu" href="/aboutidp/article55.asp">About IDP</a>&nbsp;|&nbsp;<a class="menu" href="/aboutidp/clientservices/article418.asp">Client Services</a>&nbsp;|&nbsp;<a class="menu" href="/aboutidp/employment/article25.asp">Employment</a>&nbsp;|&nbsp;<a class="menu" href="/mediacentre/article26.asp">Media</a>&nbsp;|&nbsp;<a class="menu" href="/aboutidp/contactidp/article27.asp">Contact IDP</a>&nbsp;|&nbsp;<a class="menutop" href="/update.asp">Newsletter</a>
+            &nbsp;&nbsp;<a class="menu" href="/default.asp">IDP Home</a>&nbsp;|&nbsp;
+<a class="menu" href="/aboutidp/article835.asp">Corporate</a>&nbsp;|&nbsp;
+<a class="menu" href="/aboutidp/clientservices/article418.asp">Client Services</a>&nbsp;|&nbsp;
+<a class="menu" href="/aboutidp/employment/article25.asp">Employment</a>&nbsp;|&nbsp;
+<a class="menu" href="/Opportunities/">Opportunities</a>&nbsp;|&nbsp;
+<a class="menu" href="/mediacentre/article26.asp">Media</a>&nbsp;|&nbsp;
+<a class="menu" href="/aboutidp/contactidp/article27.asp">Contact IDP</a>&nbsp;|&nbsp;
+<a class="menu" href="/update.asp">Newsletter</a>&nbsp;|&nbsp;
+<a class="menu" href="/aboutidp/article55.asp">About IDP</a>&nbsp;|&nbsp;
 
 <br><br><br>
-<p>&nbsp;&nbsp;<b>Sunday, April 4, 2004</b></p>
+<p>&nbsp;&nbsp;<b>Sunday, December 5, 2004</b></p>
 </td>
 <td valign="top" align="left" height="65" width="140"><script>
 function checkSearchForm(form){
@@ -218,8 +248,9 @@ function closeWindow()
 <p>The company can refuse to provide access to personal information where the Privacy Act allows it to do so.</p><a name="7"></a>
 <h2>Privacy Representative</h2>
 <p>IDP's Privacy Representative is the Company Secretary. Any questions, concerns or complaints about the company's Privacy Policy or its practices related to privacy of personal information should be address to the Representative, as follows:</p>
-<p>The Company Secretary<br>IDP Education Australia Limited<br>1 Geils Court<br>Deakin ACT Australia 2601</p>
-<p>Telephone: 61 2 6285-8222<br>Facsimile 61 2 6285-3036</p><a name="8"></a>
+<blockquote dir="ltr" style="MARGIN-RIGHT: 0px">
+<p>The Company Secretary<br>IDP Education Australia Limited<br>Level 4, 210 Clarence Street <br>Sydney NSW 2000 <br>AUSTRALIA</p>
+<p>Telephone: +61 2 8251 2740<br>Facsimile +61 2 8251 2785<br></p></blockquote><a name="8"></a>
 <h2>Personal Information Management Policy Statement </h2>
 <p>IDP Education Australia Limited (IDP) is bound by the National Privacy Principles (NPP's), as set out in the <a href="http://www.privacy.gov.au/act/index.html">Privacy Act 1988</a> (as amended).</p>
 <p>In general, IDP holds the following types of personal information:</p>
@@ -242,7 +273,8 @@ function closeWindow()
 </li><li>developing and implementing appropriate computer system controls </li></ul>
 <p>IDP is a contractor to the Commonwealth and State governments, and contracts out services.</p>
 <p>Complaints about possible breaches of privacy should be marked as "Confidential", and addressed to:</p>
-<p>The Company Secretary<br>IDP Education Australia Limited<br>1 Geils Court<br>Deakin ACT 2601</p>
+<blockquote dir="ltr" style="MARGIN-RIGHT: 0px">
+<p>The Company Secretary<br>IDP Education Australia Limited<br>Level 4, 210 Clarence Street <br>Sydney NSW 2000 <br>AUSTRALIA</p></blockquote>
 <p>Requests for access to personal information should be addressed to the Company Secretary (as set out above).</p>
 <p>Where a request is limited to access to an individual's personal information, the company will take all reasonable steps to respond within five (5) working days of the receipt of the request. These steps will include verification of the identity of the individual concerned. </p>
 <p>Where the request is in respect of correction of inaccuracies to an individual's personal information, the nature of the inaccuracy must be clearly stated, along with the information required to be entered in lieu of the inaccurate information. The company will take all reasonable steps to respond within five (5) working days of the receipt of the request. These steps will include verification of the identity of the individual concerned.</p>
@@ -250,7 +282,7 @@ function closeWindow()
 <p>Where the individual's identity cannot be verified to the satisfaction of the Company Secretary, the request for access will be denied.</p>
 <p>For more information contact:</p>
 <blockquote style="MARGIN-RIGHT: 0px">
-<p>Neil Owens <br>Company Secretary <br>IDP Education Australia Limited <br>Phone: +61 2 6285 8321 <br>Email: <a href="mailto:neil.owens@idp.com">neil.owens@idp.com</a></p></blockquote><p></p>
+<p>Joanna Burke<br>Company Secretary <br>IDP Education Australia Limited <br>Phone - +61 2 8251 2740<br>Fax -&nbsp;&nbsp;&nbsp;&nbsp;+61 2 8251 2785 <br>Email - <a href="mailto:joanna.burke@idp.com">joanna.burke@idp.com</a></p></blockquote><p></p>
 <p align="right"><a class="menu" href="#top">Back to top</a><br>
 </p>
 </td>
