allaboutvision.com (archived on 2004-12-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4321,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.57,
  "homepage_snapshot_redirected_domain": "allaboutvision.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001070130id_/http://www.allaboutvision.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001070130id_/http%3A//allaboutvision.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "allaboutvision.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041204183646id_/http%3A//www.allaboutvision.com/privacy.htm",
  "policy_title": "AllAboutVision.com Privacy Policy",
  "policy_url": "allaboutvision.com/privacy.htm",
  "sha1": "b67f3f9d4adb3a55e04e8e23e529bb5837e5e15c",
  "simhash": 14436586376672742238,
  "simhash_updated": false,
  "site_hostname": "allaboutvision.com",
  "site_url": "http://allaboutvision.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041204183646",
  "word_count": 712,
  "year": 2004
}

--- a/a/al/all/allaboutvision.com.html
+++ b/a/al/all/allaboutvision.com.html
@@ -1,30 +1,32 @@
-<!--The following is the downloaded HTML source of the allaboutvision.com privacy policy that was archived on 2004-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040623132723id_/http%3A//www.allaboutvision.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allaboutvision.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204183646id_/http%3A//www.allaboutvision.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>AllAboutVision.com Privacy Policy</title>
 <script language="JavaScript" src="/asp/shared.js"></script>
-<script language="JavaScript1.1" src="include/imageprotect.js"></script>
+
 <link rel="stylesheet" href="style_sheet.css" type="text/css">
 </head>
 
 <body bgcolor="#003366" topmargin="0" marginheight="0" marginwidth="0" leftmargin="0" link="#000066" vlink="#000066">
-<a name="top"></a><!--webbot bot="Include" U-Include="include/main_site_top.htm" TAG="BODY" startspan -->
+<a name="top"></a><!--webbot bot="Include" 
+U-Include="include/main_site_top.htm" TAG="BODY" startspan -->
 
 <center><table border="0" cellpadding="0" cellspacing="0" width="758"><tbody><tr>
-<td width="218" rowspan="2"><a href="http://www.allaboutvision.com/"><img border="0" src="include/aav-logo-bluebg.jpg" width="218" height="73"></a></td>
+<td width="218" rowspan="2"><a href="http://www.allaboutvision.com"><img border="0" src="include/aav-logo-bluebg.jpg" width="218" height="73"></a></td>
 <td width="289"><img border="0" src="include/topmotto.jpg" width="289" height="46"></td>
 <td width="68"><a href="http://www.allaboutvision.com/sitemap.htm"><img border="0" src="include/topsitemap.jpg" width="68" height="46"></a></td>
 <td width="61"><a href="http://www.allaboutvision.com/asp/sitesearch.asp"><img border="0" src="include/topsearch.jpg" width="61" height="46"></a></td>
 <form method="post" action="http://www.allaboutvision.com/asp/sitesearch.asp"></form><td width="122" background="include/topbg.jpg"><table border="0" cellpadding="0" cellspacing="0" width="122"><tbody><tr><td valign="bottom"><span class="drop"><input type="text" name="searchstring" size="9" class="drop" value=""><input type="image" name="Action" src="include/go-search-a.gif" alt="Go" width="19" height="16" border="0"></span></td></tr></tbody></table></td></tr>
-<tr><td width="540" colspan="4"><map name="FPMap0_I1">
-<area href="http://www.allaboutvision.com/premiums/" shape="rect" coords="427, 2, 539, 26">
-<area href="http://www.allaboutvision.com/buysmart/" shape="rect" coords="334, 1, 424, 26">
-<area href="http://www.allaboutvision.com/eye-doctor/" shape="rect" coords="237, 2, 333, 26" title="Find an eye doctor">
-<area href="http://www.allaboutvision.com/premiums/" shape="rect" coords="113, 1, 235, 26">
-<area href="http://www.allaboutvision.com/products/" shape="rect" coords="0, 2, 108, 26"></map><img border="0" src="include/topnav.jpg" usemap="#FPMap0_I1" width="540" height="27"></td></tr></tbody></table></center>
+<tr><td width="540" colspan="4"><table border="0" cellpadding="0" cellspacing="0" width="540"><tbody><tr>
+<td width="105"><a href="http://www.allaboutvision.com/products/"><img border="0" src="include/top-product-profiles.gif" width="105" height="27"></a></td>
+<td width="116"><a href="http://www.allaboutvision.com/premiums/"><img border="0" src="include/top-rebates-and-savings.gif" width="116" height="27"></a></td>
+<td width="89"><a href="http://www.allaboutvision.com/eye-doctor/"><img border="0" src="include/top-find-a-doctor.gif" width="89" height="27" alt="Find an Eye Doctor - Optometrist or M.D."></a></td>
+<td width="86"><a href="http://www.allaboutvision.com/buysmart/"><img border="0" src="include/top-buy-smarter.gif" width="86" height="27"></a></td>
+<td width="144"><a href="http://www.allaboutvision.com/lasik-surgeons/"><img border="0" src="include/top-find-a-lasik-surgeon.gif" width="144" height="27" alt="Find a LASIK Surgeon"></a></td>
+</tr></tbody></table></td></tr></tbody></table></center>
 
-<!--webbot bot="Include" endspan i-checksum="51889" -->
+<!--webbot bot="Include" i-checksum="46571" endspan -->
 
 <center><table border="0" cellpadding="0" cellspacing="0" width="758"><tbody><tr><td width="4" valign="top" rowspan="2"><img src="blubit.gif" alt="Privacy policy for AllAboutVision.com" width="4" height="83"></td><td width="161" valign="top" background="blubit2.gif"><img src="sp.gif" width="1" height="1"></td><td width="14" bgcolor="#ffffff" rowspan="2"><img src="sp.gif" width="2" height="1" hspace="6"></td>
 <td width="565" valign="top" bgcolor="#ffffff" rowspan="2">
@@ -94,7 +96,7 @@ location=section[document.dropdown.site.selectedIndex];
 <td width="3" bgcolor="#b5d5fb"><img src="sp.gif" width="1" height="1" hspace="1"></td></tr></tbody></table>
 
 
-<!--webbot bot="Include" endspan i-checksum="45983" -->
+<!--webbot bot="Include" i-checksum="45983" endspan --> 
 
 <!-- privacy statement -->
 <h2 class="hed">Privacy Statement</h2>
@@ -201,7 +203,7 @@ contacting these sites for relevant information about their data collection.&nbs
 <tr><td height="18"><p><a class="sitenav" href="http://www.allaboutvision.com/over40/"> &nbsp; &nbsp;Vision Over 40</a></p></td></tr>
 <tr><td bgcolor="#849cb6"><img src="sp.gif" width="1" height="1"></td></tr><tr><td bgcolor="#e7efff"><img src="sp.gif" width="1" height="1"></td></tr>
 <tr><td height="18"><p><a class="sitenav" href="http://www.allaboutvision.com/resources/"> &nbsp; &nbsp;Resources</a></p></td></tr></tbody></table>
-<!--webbot bot="Include" endspan i-checksum="3229" -->
+<!--webbot bot="Include" i-checksum="3229" endspan --> 
 <!--This is where../include/resources_adv2.htm would go. -->
 <table border="0" cellpadding="0" cellspacing="0" width="161">
 <tbody><tr><td valign="top">
@@ -225,7 +227,8 @@ contacting these sites for relevant information about their data collection.&nbs
 </tbody></table>
 <!--bottompromoend-->
 </td><td width="14" bgcolor="#ffffff"><img src="sp.gif" width="2" height="1" hspace="6"></td>
-<td width="565" valign="top" bgcolor="#ffffff"><!--webbot bot="Include" U-Include="include/resources_nav_2b.htm" TAG="BODY" startspan -->
+<td width="565" valign="top" bgcolor="#ffffff"><!--webbot bot="Include" 
+U-Include="include/resources_nav_2b.htm" TAG="BODY" startspan -->
 
 <table border="0" cellpadding="0" cellspacing="0" width="565">
 <tbody><tr><td width="565" colspan="3" background="dotrulehor.gif"><img src="sp.gif" width="1" height="1"></td></tr>
@@ -254,7 +257,7 @@ contacting these sites for relevant information about their data collection.&nbs
 <tr><td width="565" colspan="3"><img src="sp.gif" width="1" height="1" vspace="1"></td></tr>
 </tbody></table>
 
-<!--webbot bot="Include" endspan i-checksum="5701" -->
+<!--webbot bot="Include" i-checksum="5701" endspan -->
 
 &nbsp; <table border="0" cellpadding="0" cellspacing="0" width="565"><tbody><tr><td background="dotrulehor.gif"><img src="sp.gif" width="1" height="1"></td></tr><tr><td><img src="sp.gif" width="1" height="2" vspace="6"></td></tr></tbody></table>
 <!--webbot bot="Include" U-Include="include/main_copyright.htm" TAG="BODY" startspan -->
@@ -264,20 +267,26 @@ contacting these sites for relevant information about their data collection.&nbs
 <font color="#000066"><u>Blue</u></font> = other pages<br>&nbsp; <br>
 <a href="http://www.allaboutvision.com" title="All About Vision">All About Vision</a> and 
 Virtually Everything in Sight are registered service marks 
-of Access Media Group, LLC. Copyright 2000-2004 Access Media Group, LLC. 
-Copying or reproducing any text or graphics from this website is strictly prohibited by copyright law.<br>&nbsp; <br>
-<a href="http://www.allaboutvision.com/eye-doctor/">Find an Eye Doctor</a> &nbsp; 
+of Access Media Group, LLC. Copyright 2000-2004 Access Media Group, LLC.</p>
+<table border="0" cellpadding="0" cellspacing="1" width="402" bgcolor="#003366">
+<tbody><tr><td><table border="0" cellpadding="8" cellspacing="0" width="400" bgcolor="#ffffff">
+<tbody><tr><td><p class="copyrt" align="center"><font color="#000066"><b>Images and text on this site belong to AllAboutVision.com. 
+Copying or reproducing any text or graphics from this website is strictly prohibited by copyright law.</b></font></p></td></tr></tbody></table></td></tr></tbody></table>
+<p class="copyrt" align="center"><a href="http://www.allaboutvision.com/lasik-surgeons/">Find a LASIK Surgeon</a> &nbsp; 
+<a href="http://www.allaboutvision.com/eye-doctor/">Find an Optometrist</a><br>
 <a href="http://www.allaboutvision.com/sitemap.htm">Site Map</a> &nbsp; 
 <a href="http://www.allaboutvision.com/about-us.htm">About Us</a> &nbsp; 
 <a href="http://www.allaboutvision.com/contact-us.htm">Contact Us</a> &nbsp; 
 <a href="http://www.allaboutvision.com/terms.htm">Terms of Use</a> &nbsp; 
 <a href="http://www.allaboutvision.com/privacy.htm">Privacy Policy</a><br>
 </p><form method="post" action="http://www.allaboutvision.com/asp/sitesearch.asp">
-<span class="drop" align="center">Search this website: <input type="text" name="searchstring" size="20" class="drop" value=""><input type="image" name="Action" src="include/go-search-b.gif" alt="Go" width="19" height="16" border="0" hspace="3"></span></form></td></tr></tbody></table>
+<span class="drop" align="center">Search this website: <input type="text" name="searchstring" size="20" class="drop" value=""><input type="image" name="Action" src="include/go-search-b.gif" alt="Go" width="19" height="16" border="0" hspace="3"></span></form><p></p></td></tr></tbody></table>
 <noscript>
 <A HREF=http://www.metrodate.com>dating</A>
 </noscript>
-<!--webbot bot="Include" endspan i-checksum="28986" -->
+
+
+<!--webbot bot="Include" i-checksum="65305" endspan -->
 
 &nbsp; </td><td width="14" bgcolor="#ffffff"><img src="sp.gif" width="2" height="1" hspace="6"></td></tr></tbody></table></center>
 
