--- a/d/dp/dpc/dpchallenge.com.html
+++ b/d/dp/dpc/dpchallenge.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dpchallenge.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606160817id_/http%3A//www.dpchallenge.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dpchallenge.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204190612id_/http%3A//www.dpchallenge.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>DPChallenge - A Digital Photography Contest</title>
@@ -80,7 +80,7 @@ If  you have any questions regarding this Privacy Statement, the practices of DP
 						<a href="#" class="u">Top ^</a>
 				<br>DPChallenge, and website content and design, Copyright © 2001-2004 Challenging Technologies, LLC.
 			<br>All digital photo copyrights belong to the photographers and may not be used without permission.
-			<br>Proudly hosted by <a href="http://www.sargasso.net/" target="_blank" class="u" style="color:#666666">Sargasso Networks</a>. Current Server Time: 06/06/2004 12:08 PM EDT.	</div>
+			<br>Proudly hosted by <a href="http://www.sargasso.net/" target="_blank" class="u" style="color:#666666">Sargasso Networks</a>. Current Server Time: 12/04/2004 02:06 PM EST.	</div>
 
 	</td></tr></tbody></table>
 
